manifests-disable/agentgateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kgateway-agentgateway
spec:
  controllerName: kgateway.dev/kgateway
  description: GatewayClass using agentgateway proxy
  parametersRef:
    group: gateway.kgateway.dev
    kind: GatewayParameters
    name: agentgateway-params
    namespace: kgateway-system
