manifests-disable/httproute-disable-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-with-disable
  namespace: default
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "disabled.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /disabled
      backendRefs:
        - name: backend
          port: 3000
