manifests-disable/simple-extproc-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-extproc-route
  namespace: default
spec:
  parentRefs:
    - name: test-gateway
  hostnames:
    - "simple.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 3000
